# depth_learner

./: README.md  download_data_uvd.sh  download_model_uvd.sh  load_uvd_data.sh  requirements.txt  setup_env.sh
depth_learner/: CMakeLists.txt  package.xml  setup.py
depth_learner/src/depth_learner/: common_flags.py  plot_losses.ipynb  train.py  visualize_predictions.ipynb
depth_learner/src/depth_learner/configs/: eigen.yaml  resnet.yaml
depth_learner/src/depth_learner/experiments/resnet50_0306/: model-40.index
depth_learner/src/depth_learner/models/: base_learner.py  data_utils.py  nets.py
online_inference/: CMakeLists.txt  package.xml  setup.py
online_inference/launch/: experiment.launch  rviz.launch  rviz_config.rviz  rviz_experiment.launch
online_inference/nodes/: online_inference.py
online_inference/src/Network/: Network.py  eigen.yaml  resnet.yaml
point_cloud_utils/: CMakeLists.txt  package.xml
point_cloud_utils/include/: generate_point_cloud.h  sample_img_dir.h
point_cloud_utils/msg/: Keypoints.msg
point_cloud_utils/src/: generate_point_cloud.cpp  sample_img_dir.cpp
