<?xml version="1.0"?>
<package format="2">
  <name>depth_learner</name>
  <version>0.0.1</version>
  <description>Tensorflow learner model for monocular depth regression</description>

  <maintainer email="zimoritz@student.ethz.ch">Moritz Zimmermann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
